--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Your Sidebar Name"
-  avatar           : "profile.png"
+  avatar           : "IMG_20220629_183436.jpg"
   bio              : "Your biography for the left-hand sidebar"
   location         : "University of Maine"
   employer         :
